# aapi

./: .gitignore  README.md
antenna-analyzer/: .gitignore  CMakeLists.txt  CMakeLists.txt.user.NrXzWe  README.md  board_launch.sh  board_make.sh  eglfs_kms_lima.json
antenna-analyzer/sources/: AboutView.qml  BatteryIndicator.qml  ConfigView.qml  DSPView.qml  HWCalibrationView.qml  MeasurementView.qml  MeasurementViewForm.ui.qml  OSLCalibrationView.qml  OscilloscopeTab.qml  PanVSWRTab.qml  PanVSWRView.qml  ParamEnumView.qml  ParamTextView.qml  ProgressCtrl.qml  RXChartTab.qml  SmithChart.qml  SmithChartTab.qml  SpectrumTab.qml  StatusIndicatorCtrl.qml  SwipePage.qml  TwoStateButtonCtrl.qml  VSWRChartTab.qml  analyzer_app.cpp  analyzer_app.h  analyzer_object.h  antenna-analyzer.pro  env.txt  error_codes.h  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
antenna-analyzer/sources/analyzer/: analyzer_calibrator.cpp  analyzer_calibrator.h  analyzer_config.cpp  analyzer_config.h  analyzer_dsp.cpp  analyzer_dsp.h  analyzer_generator.cpp  analyzer_generator.h  analyzer_measure.cpp  analyzer_measure.h  callback_holder.h  math_utils.cpp  math_utils.h  simple_array.h
antenna-analyzer/sources/analyzer/antscope/: antscope_device.cpp  antscope_device.h
antenna-analyzer/sources/audio/: audio_reader.cpp  audio_reader.h
antenna-analyzer/sources/audio/impl/: alsa_reader.cpp  alsa_reader.h
antenna-analyzer/sources/serial/: serial_modem.cpp  serial_modem.h  uart_device.cpp  uart_device.h
antenna-analyzer/sources/ui/: qml_about_view.cpp  qml_about_view.h  qml_config_view.cpp  qml_config_view.h  qml_dsp_view.cpp  qml_dsp_view.h  qml_hwcal_view.cpp  qml_hwcal_view.h  qml_measure_view.cpp  qml_measure_view.h  qml_oslcal_view.cpp  qml_oslcal_view.h  qml_panvswr_view.cpp  qml_panvswr_view.h  qml_status_backend.cpp  qml_status_backend.h  qml_view_backend.cpp  qml_view_backend.h
antenna-analyzer/src/app/: AapiMessageBox.qml  AapiTheme.qml  BatteryIndicator.qml  CMakeLists.txt  Main.qml  MeasureViewPage.qml  MessageBoxButtons.qml  MessageBoxItem.qml  ProgressCtrl.qml  SmithChart.qml  StatusIndicatorCtrl.qml  SwipePage.qml  TabOscilloscope.qml  TabPanVswr.qml  TabRxChart.qml  TabSmithChart.qml  TabSpectrum.qml  TabVswrChart.qml  TwoStateButtonCtrl.qml  ViewAboutApp.qml  ViewConfiguration.qml  ViewGenerator.qml  ViewHwCalibration.qml  ViewMeasurement.qml  ViewOslCalibration.qml  ViewPanoramicScan.qml  ViewParamEnum.qml  ViewParamText.qml  ViewSignalProcess.qml  aapi_application.cpp  aapi_application.h  aapi_error.h  aapi_object.h  main.cpp  qtquickcontrols2.conf  resources.qrc
antenna-analyzer/src/app/analyzer/: aapi_calibrator.cpp  aapi_calibrator.h  aapi_config.cpp  aapi_config.h  aapi_configuration.cpp  aapi_configuration.h  aapi_device.cpp  aapi_device.h  aapi_generator.cpp  aapi_generator.h  aapi_measure_task.cpp  aapi_measure_task.h  aapi_signal_process.cpp  aapi_signal_process.h
antenna-analyzer/src/app/analyzer/antscope/: antscope_device.cpp  antscope_device.h
antenna-analyzer/src/app/audio/: audio_reader.cpp  audio_reader.h
antenna-analyzer/src/app/audio/impl/: alsa_reader.cpp  alsa_reader.h
antenna-analyzer/src/app/resources/: errors-en_US.ini  license.txt
antenna-analyzer/src/app/serial/: aapi_serial_modem.cpp  aapi_serial_modem.h  aapi_uart_device.cpp  aapi_uart_device.h
antenna-analyzer/src/app/ui/: aapi_about_app_view.cpp  aapi_about_app_view.h  aapi_aquish_style.cpp  aapi_aquish_style.h  aapi_base_style.cpp  aapi_base_style.h  aapi_configuration_view.cpp  aapi_configuration_view.h  aapi_hw_calibration_view.cpp  aapi_hw_calibration_view.h  aapi_measure_view.cpp  aapi_measurement_view.cpp  aapi_measurement_view.h  aapi_messages.cpp  aapi_messages.h  aapi_osl_calibration_view.cpp  aapi_osl_calibration_view.h  aapi_panoramic_scan_view.cpp  aapi_panoramic_scan_view.h  aapi_signal_process_view.cpp  aapi_signal_process_view.h  aapi_status_backend.cpp  aapi_status_backend.h  aapi_style_chart.cpp  aapi_style_chart.h  aapi_style_smith.cpp  aapi_style_smith.h  aapi_view_backend.cpp  aapi_view_backend.h
antenna-analyzer/src/app/utils/: aapi_complex.h  aapi_math_utils.h  simple_array.h  simple_map.h  simple_string.cpp  simple_string.h  simple_variant.cpp  simple_variant.h
hardware/KiCad/: AA-PI-Components.bck
hardware/KiCad/AA-PI-Display-Board-RaspberryPi3/: AA-PI-Display-Board-RaspberryPi3-cache.lib  AA-PI-Display-Board-RaspberryPi3-eagle-import.lib  AA-PI-Display-Board-RaspberryPi3.kicad_pcb  AA-PI-Display-Board-RaspberryPi3.pro  AA-PI-Display-Board-RaspberryPi3.sch  fp-lib-table  sym-lib-table
hardware/KiCad/AA-PI-Footprints.pretty/: 1.25-AB-SMT-6pin-Vertical.kicad_mod  CP_EIA-6032-28_Kemet-C.kicad_mod  CP_EIA-7343-31_Kemet-D.kicad_mod  FH26W-33S-0.3SHW.kicad_mod  FPC-0.5-1-40P_Clamshell_Bottom.kicad_mod  FPC-1.0D-WTS-15P.kicad_mod  JST_PH_B2B-PH-SM4-TB_1x02-1MP_P2.00mm_Vertical.kicad_mod  LCD-0.3-33P-CABLE-HOLE.kicad_mod  MCX-PCB-Mount-Jack-50Ohm.kicad_mod  PCB-Standoff-Spacer-SMD-M3.kicad_mod  SOP65P780X200-28N.kicad_mod  SOT-223-3_TabPin2.kicad_mod  SW_SPDT_PCM12.kicad_mod
hardware/KiCad/AA-PI-Radio-Board/: AA-PI-Radio-Board-cache.lib  AA-PI-Radio-Board-eagle-import.dcm  AA-PI-Radio-Board-eagle-import.lib  AA-PI-Radio-Board.dsn  AA-PI-Radio-Board.kicad_pcb  AA-PI-Radio-Board.pro  fp-lib-table  sym-lib-table
hardware/docs/battery/: README.md  config.txt  roomtemp_rel_dis_rel.csv
hardware/kicad/: .gitignore  AA-PI-Components.dcm  AA-PI-Components.lib
hardware/kicad/AA-PI/: AA-PI-Components.lib  (+1 more)
hardware/kicad/AA-PI-Display-Board-NanoPiA64/: AA-PI-Display-Board-NanoPiA64-cache.lib  AA-PI-Display-Board-NanoPiA64.kicad_pcb  AA-PI-Display-Board-NanoPiA64.net  AA-PI-Display-Board-NanoPiA64.pro  AA-PI-Display-Board-NanoPiA64.sch  AA-PI-Display-Board-RaspberryPi3.sch
hardware/kicad/AA-PI-Display-Board-RaspberryPi3/: AA-PI-Display-Board-RaspberryPi3-cache.lib  AA-PI-Display-Board-RaspberryPi3.kicad_pcb  AA-PI-Display-Board-RaspberryPi3.net  AA-PI-Display-Board-RaspberryPi3.pro  AA-PI-Display-Board-RaspberryPi3.sch  sym-lib-table
(+340 files in other folders)
